--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["DannyPikmin <<>>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 discord = "^1.7.3"
+requests = "^2.27.1"
 
 [tool.poetry.dev-dependencies]
 
